# cookiecutter-pypackage

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/docs/: make.bat
